--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/regression": "^2.0.6",
     "mongodb": "^6.8.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
